resolve alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,17 @@
 .App {
+  position: relative;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;/* Set the height of the container to full screen height */
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+/* Set the height of the container to full screen height */
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
